src/test/deca/context/valid/homemade/test/test_valid_instanceof_null.deca
// test valide de la règle instance of

class A{

}
class B extends A{

}

{
    A a = new A();
    println(null instanceof B);
}