src/test/deca/context/invalid/homemade/tests/test_cast_invalid_float_boolean.deca
// test invalide de la règle cast



{
    boolean a = true;
    (float) (a);
}